--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Lorem, ipsum.</h1>
     <p>Lorem ipsum dolor sit amet.</p>
+    <figure>
+        <img src="https://picsum.photos/seed/picsum/200/300" alt="" srcset="">
+    </figure>
 </body>
 </html>
